# Demo2

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Changelog.md  Context.md  Debug.md  ISSUE_TOOLING_MISMATCH.md  LICENSE  Makefile  Progress.md  README.md  SECURITY.md  Tooling-Notes.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
eventbrite/: __init__.py  client.py  config.py  models.py  output.py  service.py
tests/: test_client.py  test_config.py  test_main.py  test_output.py  test_service.py
