[project]
name = "demo2"
version = "0.1.0"
description = "Eventbrite data ingestion client and JSON exporter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.2.2",
  "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "pre-commit>=4.3.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.11",
  "types-requests>=2.32.4.20250809",
]

[tool.pytest.ini_options]
addopts = [
  "-q",
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["eventbrite", "main"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["eventbrite", "main.py"]
warn_unused_configs = true
warn_unreachable = true
strict = true
